# bpm_app

./: CLAUDE.md  README.md  app.py  bpm_detector.py  pyproject.toml  test_bpm_detector.py  test_comparison.py  test_results.py
.claude/: settings.local.json
.github/workflows/: test.yml
